refactor: adding queues in kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,23 +2,20 @@ spring.cloud.config.profile=dev
 spring.application.name=yanki-microservice
 server.port=8086
 spring.cloud.compatibility-verifier.enabled=false
-#eureka.client.service-url.defaultZone=http://10.0.247.18:8761/eureka/
+eureka.client.service-url.defaultZone=http://10.0.247.18:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 eureka.instance.preferIpAddress=true
 
 # Redis
-spring.data.redis.host=localhost
+spring.data.redis.host=10.0.73.169
+#spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
-
-# Configuración para Kafka
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=wallet-group
+# Kafka
+spring.kafka.bootstrap-servers=10.0.17.254:9092
+spring.kafka.consumer.group-id=wallet_service_group
+spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-
-# Topic para enviar solicitud de verificación de tarjeta de débito
-wallet.kafka.topic.verify-debit-card=verify-debit-card-topic
-
-# Listener para recibir respuesta de verificación de tarjeta de débito
-wallet.kafka.topic.debit-card-verification-response=debit-card-verification-response
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
